<resources>
    <string name="app_name">BLE测试工具</string>
    <string name="title_activity_device_connect">DeviceConnect</string>
    <string name="title_activity_characterisitic">CharacterisiticActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_change_char">ChangeCharActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">设备列表</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>
    <string name="menu_services">刷新服务</string>
    <string name="menu_autoconnect">自动连接</string>
    <string name="RSSI">RSSI</string>
    <string name="menu_about">关于</string>
    <string name="menu_qrcode">二维码扫描下载APP</string>
    <string name="abount_hint">代码已在github上开源，欢迎fork和star和pull request</string>
    <string name="help_hint">通知的结果保存在SD根目录下txt</string>
    <string name="about_question">如果有疑问，或者有好的建议，请联系:</string>
    <string name="description_list">描述列表:</string>
    <string name="characteristic_value">特征值:</string>
    <string name="character_string">字符串</string>
    <string name="hexadecimal">16进制</string>
    <string name="write_value">写入值</string>
    <string name="delivery_on_time">定时发送</string>
    <string name="delivery_time">发送时间/ms</string>
    <string name="count">共:</string>
    <string name="edit_hint_one">编辑按键1的值</string>
    <string name="edit_hint_two">编辑按键2的值</string>
    <string name="edit_hint_three">编辑按键3的值</string>
    <string name="address">地址:</string>
    <string name="rssi">Rssi:</string>
    <string name="broadcast_packet">广播包：</string>
    <string name="broadcast_racket_name">广播包中的名称：</string>
    <string name="count_hint">共:0</string>
    <string name="server_list">服务列表</string>
    <string name="disconnection_equipment">设备连接断开！</string>
    <string name="characteristic_list">特性列表</string>
    <string name="successful_connection_equipment">设备连接成功！</string>
    <string name="feature_operation">特征操作</string>
    <string name="individual">个</string>
    <string name="read">读取</string>
    <string name="write">写</string>
    <string name="start_notice">开始通知</string>
    <string name="result_count">字节数：</string>
    <string name="clear_result">清空</string>
    <string name="save">保存</string>
    <string name="read_time">读取时间</string>
    <string name="et_notify_resualt">此处显示通知的值</string>
    <string name="stop_notice">停止通知</string>
    <string name="stop_sending">停止发送</string>
    <string name="empty_hint">没有可保存的内容！</string>
    <string name="save_hint">.txt文件成功保存到SD卡根目录下</string>
    <string name="cancel_automatic_connection">取消自动连接</string>
    <string name="set_connect_disconnection">已设置为断开后自动连接</string>
    <string name="isExit_hint">再按一次退出</string>
    <string name="text_add_newline">增加新行</string>

</resources>
