<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rg_write_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_write_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/character_string" />

        <RadioButton
            android:id="@+id/rb_write_hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hexadecimal" />
    </RadioGroup>

    <EditText
        android:id="@+id/char_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_value" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_timing_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_on_time" />

        <EditText
            android:id="@+id/ed_writetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/delivery_time"
            android:inputType="number"
            android:text="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ms "
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tv_timing_write_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_hint"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_00"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="00" />

        <Button
            android:id="@+id/btn_01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="01" />

        <Button
            android:id="@+id/btn_02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="02" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/ed_edit_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_one" />

        <EditText
            android:id="@+id/ed_edit_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_two" />

        <EditText
            android:id="@+id/ed_edit_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_hint_three" />
    </LinearLayout>

</LinearLayout>